--- a/sprint-one/styles/partials/_spacings.scss
+++ b/sprint-one/styles/partials/_spacings.scss
@@ -6,13 +6,15 @@ $space-unit: 0.5rem;
 
 $normal-before-headlines-space:3rem;
 $normal-after-headlines-space:2.25rem;
-$normal-between-space:2.25rem;
+$normal-between-row-space:2.25rem;
+$normal-between-column-space:1.5rem;
 
 //mobile element space
 
 $mobile-before-headlines-space:1.5rem;
 $mobile-after-headlines-space:1rem;
-$mobile-between-space:1rem;
+$mobile-between-row-space:1rem;
+$mobile-between-column-space:1rem;
 
 //normal block space
 $normal-block-sidespace:0 auto;
